--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+<head>
+    <meta charset="utf-8" />
+    <title>Puls4</title>
+    <link rel="stylesheet" href="css/pulsa4.css" />
+</head>
+<body>
+    Blarg!
+</body>
+</html>
