--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <title>Puls4</title>
-    <link rel="stylesheet" href="css/pulsa4.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/puls4.css" />
 </head>
 <body>
     <header>
-        <div class="logo">
+        <div class="logo left">
             <img src="imagenes/logo.png" alt="Puls4" />
         </div>
         <div class="titular">
@@ -82,7 +83,7 @@
                 </div>
                 <div class="datos">
                     <a class="comentarios" href="#">10</a>
-                    <a class="estrellita" href="#">*</a>            
+                    <a class="estrellita" href="#">*</a>
                 </div>
             </div>
         </article>
