--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html lang="es">
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>Puls4</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/puls4.css" />
 </head>
 <body>
     <header>
-        <div class="logo left">
+        <div class="logo">
             <img src="imagenes/logo.png" alt="Puls4" />
         </div>
         <div class="titular">
             <h1 class="titulo">
-                Puls4
+                Puls4: Texto texto texto texto texto texto texto texto texto texto texto texto texto texto
             </h1>
             <div>
                 <a class="filtro" href="#">
-                    Responsive Design
+                    Stylus
                 </a>
                 <a class="publicar" href="#">
                     Publicar
@@ -29,7 +30,7 @@
                 <img src="imagenes/avatar.jpg" alt="You" />
             </figure>
             <a class="flechita" href="#">
-                x
+                X
             </a>
         </div>
     </header>
